--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.3.11",
     "js-yaml": "^4.1.0",
     "kafkajs": "^2.2.4",
+    "nodemailer": "^7.0.6",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
@@ -23,6 +24,7 @@
     "@eslint/js": "^9.2.0",
     "@types/config": "^3.3.4",
     "@types/node": "^20.12.11",
+    "@types/nodemailer": "^7.0.1",
     "@types/winston": "^2.4.4",
     "eslint": "^8.57.0",
     "globals": "^15.1.0",
